hard coded cube

--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@
 <title>&lt;webgl-cube&gt;</title>
 
 <webgl-cube></webgl-cube>
+
+<script src=three.js></script>
 <script src=webgl-cube.js></script>
