--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset=utf-8>
 <title>&lt;webgl-cube&gt;</title>
 
-<webgl-cube></webgl-cube>
+<webgl-cube color=lightgreen></webgl-cube>
 
 <script src=three.js></script>
 <script src=webgl-cube.js></script>
