automatically resize element

--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>&lt;webgl-cube&gt;</title>
+<link rel=stylesheet href=webgl-cube.css>
+
+<style>
+  body {
+    margin: 0;
+  }
+  webgl-cube {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+  }
+</style>
 
 <webgl-cube color=lightgreen></webgl-cube>
 
